--- a/overlay/OPlusFrameworksResTarget/res/xml/power_profile.xml
+++ b/overlay/OPlusFrameworksResTarget/res/xml/power_profile.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
     Copyright (c) 2016, The Linux Foundation. All rights reserved.
-
     Redistribution and use in source and binary forms, with or without
     modification, are permitted provided that the following conditions are
     met:
@@ -14,7 +13,6 @@
         * Neither the name of The Linux Foundation nor the names of its
           contributors may be used to endorse or promote products derived
           from this software without specific prior written permission.
-
     THIS SOFTWARE IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED
     WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
     MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT
@@ -27,6 +25,7 @@
     OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
     IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE
 -->
+<!-- project:19065 -->
 
 <device name="Android">
   <!-- Most values are the incremental current used by a feature,
@@ -39,29 +38,29 @@
        significantly, so should be measured on the shipping platform
        with a power meter. -->
   <item name="none">0</item>
-  <item name="screen.on.display0">69</item>  <!-- ~80mA -->
-  <item name="ambient.on.display0">29</item>  <!-- ~110mA -->
-  <item name="screen.full.display0">181</item>  <!-- ~250mA -->
-  <item name="bluetooth.active">80</item> <!-- Bluetooth data transfer, ~80mA -->
-  <item name="bluetooth.on">1.5</item>  <!-- Bluetooth on & connectable, but not connected, ~0.1mA -->
-  <item name="wifi.on">2.8</item>  <!-- ~3mA -->
-  <item name="wifi.active">190</item>  <!-- WIFI data transfer, ~200mA -->
-  <item name="wifi.scan">130</item>  <!-- WIFI network scanning, ~100mA -->
+  <item name="screen.on.display0">75</item>  <!-- ~100mA -->
+  <item name="screen.full.display0">260</item>  <!-- ~100mA -->
+  <item name="bluetooth.active">0.1</item> <!-- Bluetooth data transfer, ~10mA -->
+  <item name="bluetooth.on">0.1</item>  <!-- Bluetooth on & connectable, but not connected, ~0.1mA -->
+  <item name="wifi.on">1</item>  <!-- ~3mA -->
+  <item name="wifi.active">39</item>  <!-- WIFI data transfer, ~200mA -->
+  <item name="wifi.scan">15</item>  <!-- WIFI network scanning, ~100mA -->
   <item name="audio">0</item> <!-- ~10mA -->
   <item name="video">0</item> <!-- ~50mA -->
-  <item name="camera.flashlight">142</item> <!-- Avg. power for camera flash, ~160mA -->
+  <item name="camera.flashlight">72</item> <!-- Avg. power for camera flash, ~160mA -->
   <item name="camera.avg">560</item> <!-- Avg. power use of camera in standard usecases, ~550mA -->
-  <item name="gps.on">50</item> <!-- ~50mA -->
+  <item name="gps.on">32</item> <!-- ~50mA -->
 
   <!-- Radio related values. For modems without energy reporting support in firmware, use
        radio.active, radio.scanning, and radio.on. -->
-  <item name="radio.active">50</item> <!-- ~200mA -->
-  <item name="radio.scanning">3.8</item> <!-- cellular radio scanning for signal, ~10mA -->
+  <item name="radio.active">148</item> <!-- ~200mA -->
+  <item name="radio.scanning">7.8</item> <!-- cellular radio scanning for signal, ~10mA -->
   <!-- Current consumed by the radio at different signal strengths, when paging -->
   <array name="radio.on"> <!-- Strength 0 to BINS-1 -->
-      <value>2</value> <!-- ~2mA -->
-      <value>1</value> <!-- ~1mA -->
+      <value>2.4</value> <!-- ~2mA -->
+      <value>1.2</value> <!-- ~1mA -->
   </array>
+
 
   <!-- Radio related values. For modems WITH energy reporting support in firmware, use
        modem.controller.idle, modem.controller.tx, modem.controller.rx, modem.controller.voltage.
@@ -73,171 +72,111 @@
 
   <!-- A list of heterogeneous CPU clusters, where the value for each cluster represents the
        number of CPU cores for that cluster.
-
        Ex:
        <array name="cpu.clusters.cores">
          <value>4</value> // cluster 0 has cpu0, cpu1, cpu2, cpu3
          <value>2</value> // cluster 1 has cpu4, cpu5
        </array> -->
   <array name="cpu.clusters.cores">
-      <value>4</value> <!-- cluster 0 has cpu0, cpu1, cpu2, cpu3 -->
-      <value>3</value> <!-- cluster 1 has cpu4, cpu5, cpu6 -->
-      <value>1</value> <!-- cluster 1 has cpu7 -->
+      <value>6</value> <!-- cluster 0 has cpu0, cpu1, cpu2, cpu3, cpu4, cpu5 -->
+      <value>2</value> <!-- cluster 1 has cpu6, cpu7 -->
   </array>
 
     <!-- Different CPU speeds for cluster 0 as reported in
        /sys/devices/system/cpu/cpu0/cpufreq/stats/time_in_state.
-
        There must be one of these for each cluster, labeled:
        cpu.speeds.cluster0, cpu.speeds.cluster1, etc... -->
   <array name="cpu.core_speeds.cluster0">
-      <value>300000</value>   <!-- 300  MHz CPU speed -->
-      <value>403200</value>   <!-- 403.2  MHz CPU speed -->
-      <value>499200</value>   <!-- 499.2 MHz CPU speed -->
-      <value>576000</value>   <!-- 576 MHz CPU speed -->
-      <value>672000</value>   <!-- 672 MHz CPU speed -->
-      <value>768000</value>   <!-- 768 MHz CPU speed -->
-      <value>844800</value>   <!-- 844.8 MHz CPU speed -->
-      <value>940800</value>   <!-- 940.8 MHz CPU speed -->
-      <value>1036800</value>  <!-- 1036.8 MHz CPU speed -->
-      <value>1113600</value>  <!-- 1113.6 MHz CPU speed -->
-      <value>1209600</value>  <!-- 1209.6 MHz CPU speed -->
-      <value>1305600</value>  <!-- 1305.6 MHz CPU speed -->
-      <value>1382400</value>  <!-- 1382.4 MHz CPU speed -->
-      <value>1478400</value>  <!-- 1478.4 MHz CPU speed -->
-      <value>1555200</value>  <!-- 1555.2 MHz CPU speed -->
-      <value>1632000</value>  <!-- 1632 MHz CPU speed -->
-      <value>1708800</value>  <!-- 1708.8 MHz CPU speed -->
-      <value>1785600</value>  <!-- 1785.6 MHz CPU speed -->
-  </array>
-
-  <array name="cpu.core_speeds.cluster1">
-      <value>710400</value>   <!-- 710.4  MHz CPU speed -->
-      <value>825600</value>   <!-- 825.6  MHz CPU speed -->
-      <value>940800</value>   <!-- 940.8  MHz CPU speed -->
-      <value>1056000</value>  <!-- 1056  MHz CPU speed -->
-      <value>1171200</value>  <!-- 1171.2  MHz CPU speed -->
-      <value>1286400</value>  <!-- 1286.4  MHz CPU speed -->
-      <value>1401600</value>  <!-- 1401.6  MHz CPU speed -->
-      <value>1497600</value>  <!-- 1497.6  MHz CPU speed -->
-      <value>1612800</value>  <!-- 1612.8  MHz CPU speed -->
-      <value>1708800</value>  <!-- 1708.8  MHz CPU speed -->
-      <value>1804800</value>  <!-- 1804.8  MHz CPU speed -->
-      <value>1920000</value>  <!-- 1920  MHz CPU speed -->
-      <value>2016000</value>  <!-- 2016  MHz CPU speed -->
-      <value>2131200</value>  <!-- 2131.2  MHz CPU speed -->
-      <value>2227200</value>  <!-- 2227.2  MHz CPU speed -->
-      <value>2323200</value>  <!-- 2323.2  MHz CPU speed -->
-      <value>2419200</value>  <!-- 2419.2  MHz CPU speed -->
-  </array>
-
-  <array name="cpu.core_speeds.cluster2">
-      <value>825600</value>   <!-- 825.6  MHz CPU speed -->
-      <value>940800</value>   <!-- 940.8  MHz CPU speed -->
-      <value>1056000</value>  <!-- 1056  MHz CPU speed -->
-      <value>1171200</value>  <!-- 1171.2  MHz CPU speed -->
-      <value>1286400</value>  <!-- 1286.4  MHz CPU speed -->
-      <value>1401600</value>  <!-- 1401.6  MHz CPU speed -->
-      <value>1497600</value>  <!-- 1497.6  MHz CPU speed -->
-      <value>1612800</value>  <!-- 1612.8  MHz CPU speed -->
-      <value>1708800</value>  <!-- 1708.8  MHz CPU speed -->
-      <value>1804800</value>  <!-- 1804.8  MHz CPU speed -->
-      <value>1920000</value>  <!-- 1920  MHz CPU speed -->
-      <value>2016000</value>  <!-- 2016  MHz CPU speed -->
-      <value>2131200</value>  <!-- 2131.2  MHz CPU speed -->
-      <value>2227200</value>  <!-- 2227.2  MHz CPU speed -->
-      <value>2323200</value>  <!-- 2323.2  MHz CPU speed -->
-      <value>2419200</value>  <!-- 2419.2  MHz CPU speed -->
-      <value>2534400</value>  <!-- 2534.4  MHz CPU speed -->
-      <value>2649600</value>  <!-- 2649.6  MHz CPU speed -->
-      <value>2745600</value>  <!-- 2745.6  MHz CPU speed -->
-      <value>2841600</value>  <!-- 2841.6  MHz CPU speed -->
-      <value>2956800</value>  <!-- 2956.8  MHz CPU speed -->
+      <value>1700000</value>  <!-- 1700  MHz CPU speed -->
+      <value>1625000</value>  <!-- 1625  MHz CPU speed -->
+      <value>1500000</value>  <!-- 1500  MHz CPU speed -->
+      <value>1450000</value>  <!-- 1450  MHz CPU speed -->
+      <value>1375000</value>  <!-- 1375  MHz CPU speed -->
+      <value>1325000</value>  <!-- 1325  MHz CPU speed -->
+      <value>1275000</value>  <!-- 1275  MHz CPU speed -->
+      <value>1175000</value>  <!-- 1175  MHz CPU speed -->
+      <value>1100000</value>  <!-- 1100  MHz CPU speed -->
+      <value>1050000</value>  <!-- 1050  MHz CPU speed -->
+      <value>999000</value>   <!-- 999   MHz CPU speed -->
+      <value>950000</value>   <!-- 950   MHz CPU speed -->
+      <value>900000</value>   <!-- 900   MHz CPU speed -->
+      <value>850000</value>   <!-- 850   MHz CPU speed -->
+      <value>774000</value>   <!-- 774   MHz CPU speed -->
+      <value>500000</value>   <!-- 500   MHz CPU speed -->
   </array>
 
   <!-- Current at each CPU speed for cluster 0, as per 'cpu.speeds.cluster0'.
        Like cpu.speeds.cluster0, there must be one of these present for
        each heterogeneous CPU cluster. -->
   <array name="cpu.core_power.cluster0">
-      <value>32</value>  <!-- ~35mA -->
-      <value>35</value>  <!-- ~35mA -->
-      <value>37</value>  <!-- ~40mA -->
-      <value>38</value>  <!-- ~50mA -->
-      <value>39</value>  <!-- ~50mA -->
-      <value>41</value>  <!-- ~50mA -->
-      <value>41</value>  <!-- ~60mA -->
-      <value>42</value>  <!-- ~60mA -->
-      <value>43</value>  <!-- ~60mA -->
-      <value>49</value>  <!-- ~70mA -->
-      <value>52</value>  <!-- ~70mA -->
-      <value>54</value>  <!-- ~70mA -->
-      <value>54</value>  <!-- ~80mA -->
-      <value>55</value>  <!-- ~80mA -->
-      <value>55</value>  <!-- ~90mA -->
-      <value>58</value>  <!-- ~90mA -->
-      <value>61</value>  <!-- ~90mA -->
-      <value>68</value>  <!-- ~90mA -->
+      <value>151</value>  <!-- 1700  MHz CPU power -->
+      <value>143</value>  <!-- 1625  MHz CPU power -->
+      <value>128</value>  <!-- 1500  MHz CPU power -->
+      <value>126</value>  <!-- 1450  MHz CPU power -->
+      <value>119</value>  <!-- 1375  MHz CPU power -->
+      <value>114</value>  <!-- 1325  MHz CPU power -->
+      <value>107</value>  <!-- 1275  MHz CPU power -->
+      <value>101</value>  <!-- 1175  MHz CPU power -->
+      <value>96</value>  <!-- 1100  MHz CPU power -->
+      <value>92</value>  <!-- 1050  MHz CPU power -->
+      <value>90</value>   <!-- 999   MHz CPU power -->
+      <value>88</value>   <!-- 950   MHz CPU power -->
+      <value>84</value>   <!-- 900   MHz CPU power -->
+      <value>83</value>   <!-- 850   MHz CPU power -->
+      <value>81</value>   <!-- 774   MHz CPU power -->
+      <value>74</value>   <!-- 500   MHz CPU power -->
+  </array>
+
+   <array name="cpu.core_speeds.cluster1">
+      <value>2000000</value>  <!-- 2000  MHz CPU speed -->
+      <value>1950000</value>  <!-- 1950  MHz CPU speed -->
+      <value>1900000</value>  <!-- 1900  MHz CPU speed -->
+      <value>1850000</value>  <!-- 1850  MHz CPU speed -->
+      <value>1800000</value>  <!-- 1800  MHz CPU speed -->
+      <value>1710000</value>  <!-- 1710  MHz CPU speed -->
+      <value>1621000</value>  <!-- 1621  MHz CPU speed -->
+      <value>1532000</value>  <!-- 1532  MHz CPU speed -->
+      <value>1443000</value>  <!-- 1443  MHz CPU speed -->
+      <value>1354000</value>  <!-- 1354  MHz CPU speed -->
+      <value>1295000</value>  <!-- 1295  MHz CPU speed -->
+      <value>1176000</value>  <!-- 1176  MHz CPU speed -->
+      <value>1087000</value>  <!-- 1087  MHz CPU speed -->
+      <value>998000</value>   <!-- 998  MHz CPU speed -->
+      <value>909000</value>   <!-- 909  MHz CPU speed -->
+      <value>850000</value>   <!-- 850  MHz CPU speed -->
   </array>
 
   <!-- Current at each CPU speed for cluster 1, as per 'cpu.speeds.cluster1'.
        Like cpu.speeds.cluster1, there must be one of these present for
        each heterogeneous CPU cluster. -->
   <array name="cpu.core_power.cluster1">
-      <value>62</value>   <!-- ~60mA -->
-      <value>82</value>   <!-- ~60mA -->
-      <value>89</value>   <!-- ~80mA -->
-      <value>93</value>   <!-- ~80mA -->
-      <value>99</value>   <!-- ~100mA -->
-      <value>106</value>  <!-- ~100mA -->
-      <value>112</value>  <!-- ~120mA -->
-      <value>122</value>  <!-- ~120mA -->
-      <value>134</value>  <!-- ~140mA -->
-      <value>145</value>  <!-- ~140mA -->
-      <value>161</value>  <!-- ~140mA -->
-      <value>177</value>  <!-- ~170mA -->
-      <value>208</value>  <!-- ~170mA -->
-      <value>234</value>  <!-- ~190mA -->
-      <value>258</value>  <!-- ~190mA -->
-      <value>282</value>  <!-- ~200mA -->
-      <value>313</value>  <!-- ~200mA -->
-  </array>
-
-  <!-- Current at each CPU speed for cluster 2, as per 'cpu.speeds.cluster2'.
-       Like cpu.speeds.cluster2, there must be one of these present for
-       each heterogeneous CPU cluster. -->
-  <array name="cpu.core_power.cluster2">
-      <value>82</value>   <!-- ~60mA -->
-      <value>89</value>   <!-- ~80mA -->
-      <value>93</value>   <!-- ~80mA -->
-      <value>99</value>   <!-- ~100mA -->
-      <value>106</value>  <!-- ~100mA -->
-      <value>112</value>  <!-- ~120mA -->
-      <value>122</value>  <!-- ~120mA -->
-      <value>134</value>  <!-- ~140mA -->
-      <value>145</value>  <!-- ~140mA -->
-      <value>161</value>  <!-- ~140mA -->
-      <value>177</value>  <!-- ~170mA -->
-      <value>208</value>  <!-- ~170mA -->
-      <value>234</value>  <!-- ~190mA -->
-      <value>258</value>  <!-- ~190mA -->
-      <value>282</value>  <!-- ~200mA -->
-      <value>313</value>  <!-- ~200mA -->
-      <value>321</value>  <!-- ~170mA -->
-      <value>344</value>  <!-- ~190mA -->
-      <value>371</value>  <!-- ~190mA -->
-      <value>446</value>  <!-- ~200mA -->
-      <value>466</value>  <!-- ~200mA -->
+      <value>370</value>  <!-- 2000  MHz CPU power -->
+      <value>362</value>  <!-- 1950  MHz CPU power -->
+      <value>349</value>  <!-- 1900  MHz CPU power -->
+      <value>337</value>  <!-- 1850  MHz CPU power -->
+      <value>315</value>  <!-- 1800  MHz CPU power -->
+      <value>290</value>  <!-- 1710  MHz CPU power -->
+      <value>266</value>  <!-- 1621  MHz CPU power -->
+      <value>244</value>  <!-- 1532  MHz CPU power -->
+      <value>223</value>  <!-- 1443  MHz CPU power -->
+      <value>205</value>  <!-- 1354  MHz CPU power -->
+      <value>195</value>  <!-- 1295  MHz CPU power -->
+      <value>167</value>  <!-- 1176  MHz CPU power -->
+      <value>154</value>  <!-- 1087  MHz CPU power -->
+      <value>142</value>   <!-- 998  MHz CPU power -->
+      <value>131</value>   <!-- 909  MHz CPU power -->
+      <value>124</value>   <!-- 850  MHz CPU power -->
   </array>
 
   <!-- Current when CPU is awake -->
-  <item name="cpu.awake">14</item>
+  <item name="cpu.awake">12</item>
   <!-- Current when CPU is idle -->
-  <item name="cpu.idle">6.5</item>
+  <item name="cpu.idle">4.5</item>
 
   <!-- Memory bandwidth power values in mA at the rail. There must be one value
        for each bucket defined in the device tree. -->
   <array name="memory.bandwidths">
-    <value>22.7</value> <!-- mA for bucket: 100mb/s-1.5 GB/s memory bandwidth -->
+    <value>45</value> <!-- mA for bucket: 100mb/s-1.5 GB/s memory bandwidth -->
   </array>
 
   <!-- This is the battery capacity in mAh (measured at nominal voltage) -->
@@ -245,14 +184,14 @@
 
   <!-- Wifi related values. -->
   <!-- Idle Receive current for wifi radio in mA. 0 by default-->
-  <item name="wifi.controller.idle">1.35</item>
+  <item name="wifi.controller.idle">4.5</item>
   <!-- Rx current for wifi radio in mA. 0 by default-->
   <item name="wifi.controller.rx">180</item>
   <!-- Tx current for wifi radio in mA. 0 by default-->
   <item name="wifi.controller.tx">205</item>
   <!-- Current at each of the wifi Tx levels in mA. The number of tx levels varies per device
        and is available only of wifi chipsets which support the tx level reporting. Use
-       wifi.tx for other chipsets. none by default -->
+        wifi.tx for other chipsets. none by default -->
   <array name="wifi.controller.tx_levels"> <!-- mA -->
   </array>
   <!-- Operating volatage for wifi radio in mV. 0 by default-->
@@ -263,7 +202,7 @@
     <value>.002</value>  <!-- 9-64/hr -->
     <value>.02</value>   <!-- 65-512/hr -->
     <value>.2</value>    <!-- 513-4,096/hr -->
-    <value>2</value>     <!-- 4097-/hr -->
+    <value>2</value>    <!-- 4097-/hr -->
   </array>
 
 </device>
